# pico-wallet-firmware

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  HID Report Descriptor.txt  apdu.py  font.py  pico_sdk_import.cmake  tui.txt  wallet.md
include/: FreeRTOSConfig.h  mbedtls_config.h  tusb_config.h
lib/bip/: CMakeLists.txt  bip32.c  bip32.h  bip39.c  bip39.h  bip84.h  mbedtls_config.h
lib/mpack/: CMakeLists.txt
lib/ssd1306/: CMakeLists.txt  font.h  ssd1306.c  ssd1306.h
src/: CMakeLists.txt  apdu.c  apdu.h  apdu_commands.h  flash.c  flash.h  main.c  pico_wallet.c  smartcard.c  smartcard.h  tasks.h  usb_descriptors.c  usb_descriptors.h
src/apdu/: apdu.h  apdu_dispatch.c  apdu_dispatch.h  apdu_utils.c  apdu_utils.h
src/apdu/commands/: apdu_commands.h  command_hash.c  command_hash.h  command_wallet.c  command_wallet.h
src/bip/: bip32.c  bip32.h  bip39.c  bip39.h  bip84.c  bip84.h
src/bip/utils/: base58.c  base58.h  bech32.c  bech32.h  segwit.c  segwit.h
src/rpc/: rpc.h  rpc_dispatch.c  rpc_dispatch.h  rpc_utils.c  rpc_utils.h
src/rpc/commands/: command_hash.c  command_hash.h  command_ping.c  command_ping.h  command_wallet.c  command_wallet.h  rpc_commands.h
src/smartcard/: smartcard.c  smartcard.h
src/smartcard/commands/: smartcard_commands.h
src/tasks/: tasks.h
src/tasks/apdu/: apdu_handler_task.c  apdu_handler_task.h
src/tasks/flash/: flash_writer_task.c  flash_writer_task.h
src/tasks/rpc/: rpc_handler_task.c  rpc_handler_task.h
src/tasks/smartcard/: smartcard_handler_task.c  smartcard_handler_task.h
src/tasks/usb/: usb_reader_task.c  usb_reader_task.h  usb_writer_task.c  usb_writer_task.h
src/usb/: usb_descriptors.c  usb_descriptors.h
src/utils/: flash.c  flash.h
